<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_5dp"
    android:layout_gravity="center">

    <com.crimson.picshu.utils.MyTextView
        android:id="@+id/etPhoneChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_25dp"
        android:text="@string/cropping_feature"
        android:padding="@dimen/dimen_12dp"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:gravity="center"/>
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_below="@id/etPhoneChange"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:layout_height="1dp"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:background="#dad8d8" />

    <LinearLayout
        android:id="@+id/ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="25dp"
        android:layout_below="@id/view"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dimen_30dp"
                android:layout_height="@dimen/dimen_25dp"
                android:src="@drawable/ucrop_ic_rotate"/>

            <com.crimson.picshu.utils.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/dimen_17sp"
                android:text="@string/ucrop_feature2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dimen_30dp"
                android:layout_height="@dimen/dimen_25dp"
                android:src="@drawable/ucrop_ic_scale"/>

            <com.crimson.picshu.utils.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/dimen_17sp"
                android:text="@string/ucrop_feature1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dimen_30dp"
                android:layout_height="@dimen/dimen_30dp"
                android:src="@drawable/grid"/>

            <com.crimson.picshu.utils.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:textSize="@dimen/dimen_17sp"
                android:text="@string/ucrop_feature3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <Button
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:elevation="@dimen/dimen_1dp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:background="@drawable/bg_rounded_white_for_dialog"
                android:onClick="onClick"
                android:text="@string/ok"
                android:textColor="#5DBCD2"
                android:textSize="@dimen/dimen_20sp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>